package Design_Pattern.F1.src.main;
public class Ferrari implements VoitureDuChampionnatDeFormuleUn {


    @Override
    public String getColor() {
        return "Rouge";
    }

    @Override
    public void accelerer() {
        // TODO Auto-generated method stub
    }

    @Override
    public void freiner() {
        // TODO Auto-generated method stub
    }

    @Override
    public void tourner() {
        // TODO Auto-generated method stub
    }
}