package Design_Pattern.F1.src.main;

public interface VoitureDuChampionnatDeFormuleUn {
	public void accelerer();
    public void freiner();
    public void tourner();
    public String getColor();
}