package Design_Pattern.F1.src.main;

public enum VoitureType {
    mercedes, ferrari, renault
}