@startuml

class CircuitDeCourse {
    
    
}

class SafetyCar << (S,Orange) Singleton >>

enum VoitureType {
    
}


class VoitureFactory {
    getVoitureDuChampionnatDeFormuleUn : VoitureType
}
interface VoitureDuChampionnatDeFormuleUn {
   void accelerer()
   String getColor()
   void tourner()
   void freiner()
}

note right of VoitureDuChampionnatDeFormuleUn : Pattern de Factory
note right of SafetyCar : Pattern de Singleton
class Mercedes{

}
class Ferrari{
      
}
class Renault{
 
}

Mercedes ..|> VoitureDuChampionnatDeFormuleUn
Ferrari ..|> VoitureDuChampionnatDeFormuleUn
Renault ..|> VoitureDuChampionnatDeFormuleUn
SafetyCar ..|> VoitureDuChampionnatDeFormuleUn

@enduml